Making HUD and money system for the veggies

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/BookBoundJam.BookBoundJamGameMode
+GlobalDefaultGameMode=/Game/ByMatus/LiltleRedHood_GM.LiltleRedHood_GM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
