--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,6 +5,9 @@ ProjectName=First Person Template
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=66E740B4404F5C40F28FA7836463501D
 
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources=false
+
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
