--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -107,3 +107,7 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 
+[EnhancedInputPlatformSettings_Windows EnhancedInputPlatformSettings]
++InputData=None
+bShouldLogMappingContextRedirects=False
+
